force-app/main/default/objects/Opportunity/fields/Port_of_Loading_Destination_3rd_Opt__c.field-meta.xml
<CustomField>
    <fullName>Port_of_Loading_Destination_3rd_Opt__c</fullName>
    <label>Port of Loading / Destination (3rd Opt)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Port_of_Loading_Destination</valueSetName>
    </valueSet>
</CustomField>