force-app/main/default/objects/Opportunity/fields/Price_Unit__c.field-meta.xml
<CustomField>
    <fullName>Price_Unit__c</fullName>
    <label>Unit Price</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD/Tonne</fullName>
                <default>true</default>
                <label>USD/Tonne</label>
            </value>
            <value>
                <fullName>US cents/Kg</fullName>
            </value>
            <value>
                <fullName>RMB/Tonne</fullName>
            </value>
            <value>
                <fullName>EURO/Tonne</fullName>
            </value>
            <value>
                <fullName>MYR/Tonne</fullName>
            </value>
            <value>
                <fullName>IDR/Tonne</fullName>
            </value>
            <value>
                <fullName>THB/Tonne</fullName>
            </value>
            <value>
                <fullName>US Cents per KG</fullName>
                <isActive>false</isActive>
                <label>US Cents per KG</label>
            </value>
            <value>
                <fullName>US Doller per Ton</fullName>
                <isActive>false</isActive>
                <label>US Doller per Ton</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>