force-app/main/default/objects/Opportunity/fields/Purchase_No__c.field-meta.xml
<CustomField>
    <fullName>Purchase_No__c</fullName>
    <displayFormat>PUR-{00000}</displayFormat>
    <label>Purchase No</label>
    <type>AutoNumber</type>
</CustomField>