force-app/main/default/objects/Opportunity/fields/Sales_No__c.field-meta.xml
<CustomField>
    <fullName>Sales_No__c</fullName>
    <displayFormat>SALE-{00000}</displayFormat>
    <label>Sales No</label>
    <type>AutoNumber</type>
</CustomField>