force-app/main/default/objects/Opportunity/fields/Sales_Purchase_No__c.field-meta.xml
<CustomField>
    <fullName>Sales_Purchase_No__c</fullName>
    <formula>IF( RecordType.DeveloperName  = &#39;Sales&#39;,  Sales_No__c ,  Purchase_No__c )</formula>
    <label>Sales / Purchase No</label>
    <type>Text</type>
</CustomField>