force-app/main/default/objects/Opportunity/fields/Seller_Sales__c.field-meta.xml
<CustomField>
    <fullName>Seller_Sales__c</fullName>
    <defaultValue>$User.Alias</defaultValue>
    <label>Seller</label>
    <length>100</length>
    <type>Text</type>
</CustomField>