force-app/main/default/objects/Opportunity/fields/Shipping_Date_Details__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Date_Details__c</fullName>
    <label>Shipping Date Details</label>
    <length>50</length>
    <type>Text</type>
</CustomField>