force-app/main/default/objects/Opportunity/fields/Shipping_Month__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Month__c</fullName>
    <label>Shipping Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Month</valueSetName>
    </valueSet>
</CustomField>