force-app/main/default/objects/Opportunity/fields/Shipping_Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Month_Year__c</fullName>
    <label>Shipping Month/Year</label>
    <type>Date</type>
</CustomField>