force-app/main/default/objects/Opportunity/fields/Shipping_Period__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Period__c</fullName>
    <label>Shipping Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Period</valueSetName>
    </valueSet>
</CustomField>