force-app/main/default/objects/Opportunity/fields/Shipping_Terms__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Terms__c</fullName>
    <label>Shipping Terms</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FOB (Free on board)</fullName>
            </value>
            <value>
                <fullName>CIF (Cost Insurance Freight)</fullName>
            </value>
            <value>
                <fullName>EXW (Ex-Warehouse)</fullName>
            </value>
            <value>
                <fullName>DAP (Delivered at Place)</fullName>
            </value>
            <value>
                <fullName>DDP (Delivered Duty Paid)</fullName>
            </value>
            <value>
                <fullName>CFR (Cost and Freight)</fullName>
            </value>
            <value>
                <fullName>FCA (Free  Carrier)</fullName>
            </value>
            <value>
                <fullName>DDU (Delivered Duty Unpaid)</fullName>
            </value>
            <value>
                <fullName>DAP(Delivered At Place)</fullName>
            </value>
            <value>
                <fullName>DEQ (Delivered Ex Quay)</fullName>
            </value>
            <value>
                <fullName>DAT (Delivered at Terminal (named terminal at port or place of destination))</fullName>
            </value>
            <value>
                <fullName>FAS (Free Alongside Ship)</fullName>
            </value>
            <value>
                <fullName>CIP (Carriage and Insurance Paid)</fullName>
            </value>
            <value>
                <fullName>CPT (Carriage Paid To)</fullName>
            </value>
            <value>
                <fullName>DAF (Delivered at Frontier)</fullName>
            </value>
            <value>
                <fullName>DES (Delivered Ex Ship)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>