force-app/main/default/objects/Opportunity/fields/Shipping_Year__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Year__c</fullName>
    <label>Shipping Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Year</valueSetName>
    </valueSet>
</CustomField>