force-app/main/default/objects/Opportunity/fields/Small_bales__c.field-meta.xml
<CustomField>
    <fullName>Small_bales__c</fullName>
    <label>Small Bales</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>