force-app/main/default/objects/Opportunity/fields/Start_Shipping_Period__c.field-meta.xml
<CustomField>
    <fullName>Start_Shipping_Period__c</fullName>
    <label>Start Shipping Period</label>
    <required>true</required>
    <type>Date</type>
</CustomField>