force-app/main/default/objects/Opportunity/fields/Stuffing__c.field-meta.xml
<CustomField>
    <fullName>Stuffing__c</fullName>
    <label>Stuffing</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>