force-app/main/default/objects/Opportunity/fields/Terminal_Handling__c.field-meta.xml
<CustomField>
    <fullName>Terminal_Handling__c</fullName>
    <label>Terminal Handling</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>