force-app/main/default/objects/Opportunity/fields/Thick_polybags__c.field-meta.xml
<CustomField>
    <fullName>Thick_polybags__c</fullName>
    <label>Thick Polybags</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>