force-app/main/default/objects/Opportunity/fields/Thickk_polybags__c.field-meta.xml
<CustomField>
    <fullName>Thickk_polybags__c</fullName>
    <label>Thickk Polybags</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>