force-app/main/default/objects/Opportunity/fields/Tonnes__c.field-meta.xml
<CustomField>
    <fullName>Tonnes__c</fullName>
    <label>Tonnes</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>