force-app/main/default/objects/Opportunity/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <formula>Freight__c  +  Insurance__c  +  Terminal_Handling__c  +  Stuffing__c  +  Haulage__c  +  Bank_charges__c  +  Financing__c  +  ISPM_15__c  +  Mosquito_Certification__c  +  Plywood__c  +  Phytosanitary_Certification__c  +  Commission_Brokerage_Fees__c +  Small_bales__c  +  Thick_polybags__c +  Logistics__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost Component</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>