force-app/main/default/objects/Opportunity/fields/Unit_Size__c.field-meta.xml
<CustomField>
    <fullName>Unit_Size__c</fullName>
    <label>Unit Size</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1,200kg</fullName>
            </value>
            <value>
                <fullName>1,260kg</fullName>
            </value>
            <value>
                <fullName>1,330kg</fullName>
            </value>
            <value>
                <fullName>111.11kg</fullName>
            </value>
            <value>
                <fullName>113kg</fullName>
            </value>
            <value>
                <fullName>205kg</fullName>
            </value>
            <value>
                <fullName>33.33kg</fullName>
            </value>
            <value>
                <fullName>35kg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>