force-app/main/default/objects/Opportunity/fields/Warehouse_2nd_Opt__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_2nd_Opt__c</fullName>
    <label>Warehouse (2nd Opt)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Warehouse</valueSetName>
    </valueSet>
</CustomField>