force-app/main/default/objects/Opportunity/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <label>Warehouse (1st Opt)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CFL Logistics</fullName>
            </value>
            <value>
                <fullName>Cosco Shipping Logistics (Dalian) Co. Ltd</fullName>
            </value>
            <value>
                <fullName>Cosco Shipping Logistics Warehousing &amp; Distribution Co. Ltd</fullName>
            </value>
            <value>
                <fullName>Debang Qingdao Warehouse</fullName>
            </value>
            <value>
                <fullName>Ekun Qingdao Warehouse</fullName>
            </value>
            <value>
                <fullName>Qingdao Branch of CMST Development Co. Ltd</fullName>
            </value>
            <value>
                <fullName>Qingdao Ekun Logistics Co. Ltd</fullName>
            </value>
            <value>
                <fullName>Qingdao Fest Logistics Co. Ltd</fullName>
            </value>
            <value>
                <fullName>Qingdao Free Trade Supply Chain Management Co. Ltd</fullName>
            </value>
            <value>
                <fullName>Qingdao Free Trade Zone Luhai International Warehouse Co. Ltd</fullName>
            </value>
            <value>
                <fullName>Qingdao Qiantongyuan Logistics Co. Ltd</fullName>
            </value>
            <value>
                <fullName>Qingdao Qingbao Investment Holding Co. Ltd</fullName>
            </value>
            <value>
                <fullName>Qingdao QWG Port Logistics Center Co. Ltd</fullName>
            </value>
            <value>
                <fullName>Qingdao Sinotrans Supply Chain Management Co. Ltd</fullName>
            </value>
            <value>
                <fullName>Qingdao Zhonggang Storage Co. Ltd</fullName>
            </value>
            <value>
                <fullName>Shanghai Sinochem Intertrans Co. Ltd.</fullName>
            </value>
            <value>
                <fullName>Shenzhen Xin Yuan Supply Chain Management Co. Ltd</fullName>
            </value>
            <value>
                <fullName>Sinotrans Eastern Company Limited Storage &amp; Transportation Branch</fullName>
            </value>
            <value>
                <fullName>Zhongchu International Freight Agency Co. Ltd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>