force-app/main/default/objects/Opportunity/fields/Warehouse_of_Destination_1st_Opt__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_of_Destination_1st_Opt__c</fullName>
    <label>Destination Warehouse (1st Opt)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country_of_Destination__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Warehouse</valueSetName>
    </valueSet>
</CustomField>