force-app/main/default/objects/Opportunity/fields/Warehouse_of_Loading_3rd_Opt__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_of_Loading_3rd_Opt__c</fullName>
    <label>Loading Warehouse (3rd Opt)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country_of_Loading__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Warehouse</valueSetName>
    </valueSet>
</CustomField>